# go-board-tutorials

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
common/: test-common.hpp
png2verilog/: README.md  png2verilog
project-01-led/: CMakeLists.txt  Switches_To_LEDs.v  test-led.cpp
project-01-led/lattice/: .gitignore  led_sbt.project  led_syn.prj
project-02-lut/: And_Gate_Project.v  CMakeLists.txt  test-lut.cpp
project-02-lut/lattice/: lut_sbt.project  lut_syn.prj
project-03-flip-flop/: CMakeLists.txt  Clocked_Logic.v  Clocked_Logic_Intro.hpp  Clocked_Logic_Intro.v  Clocked_Logic_Intro_tb.v  Clocked_Logic_tb.v  test-flip-flop.cpp
project-03a-flip-flop/: CMakeLists.txt  Clocked_Logic.v  Switch.v  test-flip-flop.cpp
project-03a-flip-flop/lattice/: .gitignore  flip_flop_sbt.project  flip_flop_syn.prj
project-04-debounce/: CMakeLists.txt  Debounce_Project_Top.v  Debounce_Project_tb.v  test-debounce.cpp
project-04a-debounce/: CMakeLists.txt  Debounce_Project_Top.v  Debounce_Project_tb.v  test-debounce.cpp
project-04a-debounce/lattice/: debounce_sbt.project  debounce_syn.prj
project-05-7sd/: 7sd.txt  CMakeLists.txt  Project_7_Segment_Top.v  test-binary-to-7segment.cpp
project-05-7sd/lattice/: project_7segment_sbt.project  project_7segment_syn.prj
project-05a-7sd/: Auto_Counter_tb.v  CMakeLists.txt  Count_7SD_Top.v  Nibble_To_7SD.v  Nibble_To_7SD_tb.v  State_Machine_tb.v  test-auto-counter.cpp  test-bit-counter.cpp  test-nibble-to-7sd.cpp  test-state-machine.cpp  test-switch-counter.cpp
project-05a-7sd/lattice/: count_7sd_sbt.project  count_7sd_syn.prj
project-05a-7sd/rtl/: Auto_Counter.v  Bit_Counter.v  Count_7SD_Top.v  Debounce_All.v  Debounce_Switch.v  Nibble_To_7SD.v  State_Machine.v  State_Machine.vh  Switch_Counter.v
project-07-uart-rx/: CMakeLists.txt  UART_RX.v  UART_RX_To_7_Seg_Top.v
project-07-uart-rx/lattice/: uart_to_7segment_sbt.project  uart_to_7segment_syn.prj
project-07a-uart-rx/: CMakeLists.txt  Synchronizer.v  UART_Receive.v  UART_Receive_tb.v  UART_Receiver_tb.v  UART_To_7Segment_Top.v  test-uart-receive.cpp  test-uart-receiver.cpp
project-07a-uart-rx/lattice/: uart_to_7segment_sbt.project  uart_to_7segment_syn.prj
project-08-uart-tx/: CMakeLists.txt  UART_Loopback_Top.v  UART_TX.v
project-08-uart-tx/lattice/: uart_loopback_sbt.project  uart_loopback_syn.prj
project-08a-uart-tx/: CMakeLists.txt  FIFO.v  FIFO_2word_FWFT.sv  UART_Loopback_Top.v  UART_Transmitter.v  UART_Transmitter_tb.v  test-fifo-fwft.cpp  test-fifo.cpp  test-input.txt  test-uart-transmitter.cpp
project-08a-uart-tx/lattice/: uart_loopback_sbt.project  uart_loopback_syn.prj
project-09-vga/: Binary_To_7Segment.v  CMakeLists.txt  Test_Pattern_Gen.v  VGA_Test_Patterns_Top.v
project-09-vga/lattice/: vga_sbt.project  vga_syn.prj
project-09a-vga/: CMakeLists.txt  FIFO.v  Nyan_Palette.v  Nyan_Pixels.v  Seven_Segment_Display.vh  Synchronizer.v  Test_Pattern_Generator.v  UART_Receiver.v  VGA_Top.v  Video_Sync_Generator.v  Video_Sync_Generator_tb.v  bitmap1_palette.v  bitmap1_pixels.txt  bitmap2_palette.v  bitmap2_pixels.txt  foo.txt  ram.v  test-video-sync-generator.cpp
project-09a-vga/lattice/: .gitignore  bitmap1_pixels.txt  vga_sbt.project  vga_syn.prj
project-10-pong/: CMakeLists.txt  Pong_Ball_Ctrl.v  Pong_Paddle_Ctrl.v  Pong_Top.v  Project10_Pong_Top.v
project-10-pong/lattice/: pong_sbt.project  pong_syn.prj
