cmake_minimum_required(VERSION 3.19)
project(go-board-tutorials)

include(CTest)

add_subdirectory(project-01-led)
add_subdirectory(project-02-lut)
add_subdirectory(project-03-flip-flop)
add_subdirectory(project-03a-flip-flop)
add_subdirectory(project-04-debounce)
add_subdirectory(project-04a-debounce)
add_subdirectory(project-05-7sd)
add_subdirectory(project-05a-7sd)
add_subdirectory(project-07-uart-rx)
add_subdirectory(project-07a-uart-rx)
add_subdirectory(project-08-uart-tx)
add_subdirectory(project-08a-uart-tx)
